--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@400;700&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Museo+Moderno&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
 body {
